# ferrocyanide

./: Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: build.yml
content/: ferrocyanide.yaml  index.md
docs/: config.toml  config.yaml  index.md
docs/assets/: style.css
docs/content/: index.md
docs/content/docs/: docs.yaml  download-and-installation.md  index.md  user-interface.md
docs/templates/: base.html  doc.html  layout.html
docs/templates/components/: nav.html  toc-item.html  toc.html
src/: cli.rs  config.rs  lib.rs  main.rs  rendering.rs  templates.rs
src/builtins/: 404.html  SwitchColorMode.js  error.html  nav.html  theme_switch.html  toc-item.html  toc.html
src/content/: frontmatter.rs  markdown.rs  mod.rs  page.rs
src/server/: mod.rs  router.rs
templates/: base.html  layout.html
