[package]
name = "ferrocyanide"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.3"
bon = "3.6.3"
clap = { version = "4.5.37", features = ["derive"] }
comrak = "0.38.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
tera = "1.20.0"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
