[package]
name = "ferrocyanide"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
bon = "3.6.3"
clap = { version = "4.5.37", features = ["derive"] }
comrak = "0.39.0"
once_cell = "1.21.3"
pathdiff = "0.2.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
tera = "1.20.0"
time = { version = "0.3.41", features = ["macros", "parsing", "serde"] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = [
    "fs",
    "trace",
    "compression-full",
    "decompression-full",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
walkdir = "2.5.0"
